force-app/main/default/objects/Notification_Preference__c/Notification_Preference__c.object-meta.xml
<CustomObject>
    <label>Notification Preference</label>
    <nameField>
        <label>Notification Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Preferences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>