force-app/main/default/objects/Notification_Preference__c/fields/Applicable_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Profiles__c</fullName>
    <label>Applicable Profiles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>FM - Brand user</fullName>
            </value>
            <value>
                <fullName>FM - Corporate User</fullName>
            </value>
            <value>
                <fullName>FM - Site user</fullName>
            </value>
            <value>
                <fullName>FM - Technician User</fullName>
            </value>
            <value>
                <fullName>FM - Vendor User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>