force-app/main/default/objects/Notification_Preference__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>