force-app/main/default/objects/Notification_Preference__c/fields/Push_Notification__c.field-meta.xml
<CustomField>
    <fullName>Push_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push Notification</label>
    <type>Checkbox</type>
</CustomField>