force-app/main/default/objects/Notification_Preference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicable_Profiles__c</columns>
    <columns>Email_Notification__c</columns>
    <columns>Push_Notification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Applicable_Profiles__c</field>
        <operation>includes</operation>
        <value>FM - Site user</value>
    </filters>
    <label>All</label>
</ListView>